# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.org
include/: init.h  render.h  shader.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.c  shader-opengl.c  shader.c
src/core/: CMakeLists.txt  application.h  container_of.h  init.c  init.h  kref.c  kref.h  memory.c  memory.h  shader.c  window.c  window.h
src/platform/: CMakeLists.txt
src/platform/glfwWindow/: CMakeLists.txt  glfwNativeWindow.c
test/: CMakeLists.txt  test_cglm.c  test_kref.c  test_log.c  test_memory.c  test_rectangles.c  test_rectangles_with_template.c  test_shader.c  test_uniform_triangle.c
